--- a/Sources/com.jk.weather.sdPlugin/manifest.json
+++ b/Sources/com.jk.weather.sdPlugin/manifest.json
@@ -1,40 +1,42 @@
 {
-  "Actions": [
-    {
-      "Icon": "resources/actionIcon",
-      "Name": "Weather",
-      "States": [
-        {
-          "Image": "resources/actionDefaultImage",
-          "TitleAlignment": "bottom",
-          "FontSize": "10"
-        }
-      ],
-      "SupportedInMultiActions": true,
-      "Tooltip": "Get current weather condition and temperature of a given city",
-      "UUID": "com.jk.weather.action"
-    }
-  ],
-  "SDKVersion": 2,
-  "Author": "Jaouher Kharrat",
-  "CodePath": "plugin/main.html",
-  "Description": "Get current weather condition and temperature of a given city",
-  "Name": "Weather",
-  "Icon": "resources/pluginIcon",
-  "PropertyInspectorPath": "pi/main_pi.html",
-  "URL": "https://github.com/JaouherK",
-  "Version": "2.1.2",
-  "OS": [
-    {
-      "Platform": "mac",
-      "MinimumVersion": "10.11"
-    },
-    {
-      "Platform": "windows",
-      "MinimumVersion": "10"
-    }
-  ],
-  "Software": {
-    "MinimumVersion": "4.1"
-  }
+	"Actions": [
+		{
+			"Icon": "resources/actionIcon",
+			"Name": "Weather",
+			"States": [
+				{
+					"Image": "resources/actionDefaultImage",
+					"TitleAlignment": "bottom",
+					"FontSize": 10
+				}
+			],
+			"SupportedInMultiActions": true,
+			"Tooltip": "Get current weather condition and temperature of a given city",
+			"UUID": "com.jk.weather.action"
+		}
+	],
+	"SDKVersion": 2,
+	"Author": "Jaouher Kharrat",
+	"CodePath": "plugin/main.html",
+	"Description": "Get current weather condition and temperature of a given city",
+	"Name": "Weather",
+	"Icon": "resources/pluginIcon",
+	"PropertyInspectorPath": "pi/main_pi.html",
+	"URL": "https://github.com/JaouherK",
+	"Version": "2.1.2.1",
+	"OS": [
+		{
+			"Platform": "mac",
+			"MinimumVersion": "10.11"
+		},
+		{
+			"Platform": "windows",
+			"MinimumVersion": "10"
+		}
+	],
+	"Software": {
+		"MinimumVersion": "6.8"
+	},
+	"UUID": "com.jk.weather",
+	"Category": "Weather"
 }
